welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: value yYELLOW is not a member of object java.awt.Color
	var j = Color.yYELLOW
                      ^MethodsPicture:10: error: not found: value SetCouleurBrosse
		avance();SetCouleurBrosse(c); baisseBrosse();leveBrosse()
                         ^